# igreport

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  igreport.py  main.py  pyproject.toml  test_igreport.py
igreport/: __init__.py  constants.py  core.py  formatter.py  models.py  utils.py
