[project]
name = "igreport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.mypy]
strict = true
exclude = [
    "test_.*\\.py$",
]

[[tool.mypy.overrides]]
module = "test_igreport"
ignore_errors = true
