[project]
name = "igreport"
version = "0.1.0"
description = "A library for structured exception reporting and formatting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    {name = "igreport"}
]
keywords = ["exception", "error", "reporting", "traceback", "debugging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.3",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.mypy]
strict = true
exclude = [
    "test_.*\\.py$",
]

[[tool.mypy.overrides]]
module = "test_igreport"
ignore_errors = true
